# linx-model

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.yaml  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
docs/: architecture.md  doxygen-mainpage.dox  index.md  isa.md  logging.md  testing.md
include/linx/: model.hpp
include/linx/model/: elf_loader.hpp  logging.hpp  module.hpp  module_ports.hpp  packet_dump.hpp  port_info.hpp  program_image.hpp  sim_assert.hpp  sim_main.hpp  sim_object.hpp  sim_queue.hpp  sim_system.hpp  validation.hpp
include/linx/model/emulator/: compare.hpp  execution_context.hpp  minst_record.hpp  minst_record_c.h  reference_executor.hpp  state.hpp
include/linx/model/isa/: codec.hpp  disasm.hpp  generated_tables.hpp  minst.hpp
src/: elf_loader.cpp  linx_model_cli.cpp  logging.cpp  program_image.cpp  sim_assert.cpp  sim_main.cpp  validation.cpp
src/emulator/: compare.cpp  execution_context.cpp  minst_record.cpp  reference_executor.cpp  state.cpp
src/isa/: codec.cpp  disasm.cpp  generated_tables.cpp  minst.cpp
tests/avs/: linx_model_diff_suite.yaml  run_model_diff_suite.py  validate_minst_schema.py
tests/checks/: check_llvm_elf_fixtures.py  model_validation_test.cpp
tests/fixtures/llvm_elf/: manifest.json  model_privileged_exception_edge.elf  model_scalar_mcopy_mset.elf  model_tile_control_flow.elf  model_tile_descriptor_legality.elf  model_vector_lane_control.elf  regenerate_llvm_elf_fixtures.py
tests/system/: module_pipeline_test.cpp  sim_system_test.cpp
tests/unit/: emulator_test.cpp  logging_test.cpp  minst_test.cpp  program_loader_test.cpp  sim_queue_test.cpp
tools/ci/: run_clang_format_check.sh  run_clang_tidy.sh  run_doxygen.sh  run_markdownlint.sh
tools/isa/: gen_minst_codec.py
